--- a/src/programs/igotu2gpx/igotu2gpx.1
+++ b/src/programs/igotu2gpx/igotu2gpx.1
@@ -111,7 +111,7 @@ you can use it as an NMEA data source for gpsd.
 
 .SH AUTHOR
 .PP
-igotu2gpx was written by Michael Hofmann <mh21@piware.de>.
+igotu2gpx was written by Michael Hofmann <mh21@mh21.de>.
 
 .SH "REPORTING BUGS"
 .PP
@@ -119,7 +119,7 @@ Report bugs at https://bugs.launchpad.net/igotu2gpx/.
 
 .SH COPYRIGHT
 .PP
-Copyright \(co 2009 Michael Hofmann <mh21@piware.de>.
+Copyright \(co 2009 Michael Hofmann <mh21@mh21.de>.
 .PP
 This is free software. You may redistribute copies of it under the terms of the
 GNU General Public License <http://www.gnu.org/licenses/gpl.html>.
