--- a/src/programs/igotugui/igotugui.1
+++ b/src/programs/igotugui/igotugui.1
@@ -44,7 +44,7 @@ show USB and data transfer debug messages
 
 .SH AUTHOR
 .PP
-igotugui was written by Michael Hofmann <mh21@piware.de>.
+igotugui was written by Michael Hofmann <mh21@mh21.de>.
 
 .SH "REPORTING BUGS"
 .PP
@@ -52,7 +52,7 @@ Report bugs at https://bugs.launchpad.net/igotu2gpx/.
 
 .SH COPYRIGHT
 .PP
-Copyright \(co 2009 Michael Hofmann <mh21@piware.de>.
+Copyright \(co 2009 Michael Hofmann <mh21@mh21.de>.
 .PP
 This is free software. You may redistribute copies of it under the terms of the
 GNU General Public License <http://www.gnu.org/licenses/gpl.html>.
