--- a/trunk-packaging/debian/changelog
+++ b/trunk-packaging/debian/changelog
@@ -1,3 +1,9 @@
+igotu2gpx (0.4.0.227.11) jessie; urgency=low
+
+  * add translations
+
+ -- Matija Nalis <mnalis@skywalker.torres.voyager.hr>  Thu, 03 Aug 2017 13:11:54 +0200
+
 igotu2gpx (0.4.0.227.10) jessie; urgency=low
 
   * prepare packaging latest version on https://github.com/mnalis/igotu2gpx
