--- a/TODO.txt
+++ b/TODO.txt
@@ -14,6 +14,9 @@ TODO
     message:
       Removed boost-po dependency, cleanup of exception names.
 
+- add GPX extensions - https://code.launchpad.net/~hopet/igotu2gpx/extended-gpx
+  http://bazaar.launchpad.net/~hopet/igotu2gpx/extended-gpx/revision/183
+
 
 - add translations too?
   (from bzr branch lp:~igotu2gpx/igotu2gpx/trunk-translations)
