--- a/trunk-packaging/debian/changelog
+++ b/trunk-packaging/debian/changelog
@@ -1,3 +1,10 @@
+igotu2gpx (0.4.0.227.18) stretch; urgency=medium
+
+  * update for stretch
+  * lmarblewidget-qt5 library
+
+ -- Matija Nalis <mnalis@skywalker.torres.voyager.hr>  Mon, 18 Sep 2017 02:04:19 +0200
+
 igotu2gpx (0.4.0.227.17) jessie; urgency=medium
 
   * import: extra data in GPX extensions: http://bazaar.launchpad.net/~hopet/igotu2gpx/extended-gpx/revision/183
