--- a/trunk-packaging/debian/changelog
+++ b/trunk-packaging/debian/changelog
@@ -1,7 +1,10 @@
 igotu2gpx (0.4.0.227.18) stretch; urgency=medium
 
   * update for stretch
-  * lmarblewidget-qt5 library
+  * lmarblewidget-qt5 library (from bzr-hackie branch)
+  * additional qt5 fixes: https://bugreports.qt.io/browse/QTBUG-53367
+  * clean build: export QT_SELECT=qt5; export DEB_BUILD_OPTIONS="parallel=4"; make distclean; debuild
+  * allow parallel builds: debhelper 10
 
  -- Matija Nalis <mnalis@skywalker.torres.voyager.hr>  Mon, 18 Sep 2017 02:04:19 +0200
 
